
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'backend.cloudBalance'
version = '0.0.1-SNAPSHOT'
description = 'CloudBalance backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.mysql:mysql-connector-j:8.0.33'
//    implementation 'net.snowflake:snowflake-jdbc:3.16.1'
//    implementation ('com.snowflake:snowpark_2.12:1.18.0'){
//        exclude group: 'org.slf4j', module: 'slf4j-simple'
//    }
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'net.snowflake:snowflake-jdbc:3.15.1'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
}

tasks.named('test') {
    useJUnitPlatform()
}

